--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -8,6 +8,12 @@ html(lang="en")
     body
         header 
             h1 Noom
-        main 
-            h2 Welcome to Noom 
+        main
+            form#nick
+                input(type="text", placeholder="write in nickname", required)
+                input(type="submit", value="Save")
+            ul
+            form#message
+                input(type="text", placeholder="write in msg", required)
+                input(type="submit", value="Send")
         script(src="/public/js/app.js")
