--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -9,11 +9,14 @@ html(lang="en")
         header 
             h1 Noom
         main
-            form#nick
-                input(type="text", placeholder="write in nickname", required)
-                input(type="submit", value="Save")
-            ul
-            form#message
-                input(type="text", placeholder="write in msg", required)
-                input(type="submit", value="Send")
+            div#welcome
+                form
+                    input(placeholder="room name", required, type="text")
+                    button Enter Room
+            div#room
+                h3
+                form
+                    input(placeholder="message", required, type="text")
+                    button Send 
+        script(src="/socket.io/socket.io.js") <!--브라우저에 socket IO 설치-->
         script(src="/public/js/app.js")
