--- a/src/views/home.pug
+++ b/src/views/home.pug
@@ -7,7 +7,7 @@ html(lang="en")
         <link rel="stylesheet" href="https://unpkg.com/mvp.css"> 
     body
         header 
-            h1 Noom
+            h1 Noom 
         main
             div#welcome
                 h1
@@ -17,6 +17,8 @@ html(lang="en")
                 form#enter
                     input(placeholder="room name", required, type="text")
                     button Enter Room
+                h4 Open Rooms: 
+                ul
             div#room
                 h1
                 ul
